crates/papyrus_storage/src/serialization/snapshots/papyrus_storage__serialization__serializers_test__hints_regression_hint_280.snap
---
source: crates/papyrus_storage/src/serialization/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 1
- 24
- 1
- 6
- 0
- 0
- 0
- 0
- 0
- 0

